# Rust-Todolist

./: .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml
database/: database.db
migrations/2024-09-08-153220_create_posts/: up.sql
src/: db.rs  lib.rs  main.rs  models.rs  schema.rs  todolist.rs
